# ignr

./: AGENTS.md  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
.github/workflows/: release.yml
.trx/: ISSUES.md  config.toml
.trx/crdt/: ignr-k64s.automerge
examples/: config.toml
src/: main.rs
templates/: ansible.gitignore  cpp.gitignore  csharp.gitignore  dart.gitignore  docker.gitignore  elixir.gitignore  emacs.gitignore  go.gitignore  haskell.gitignore  intellij.gitignore  java.gitignore  kotlin.gitignore  linux.gitignore  macos.gitignore  node.gitignore  php.gitignore  python.gitignore  ruby.gitignore  rust.gitignore  scala.gitignore  swift.gitignore  terraform.gitignore  vim.gitignore  vscode.gitignore  windows.gitignore  zig.gitignore
